--- a/src/components/header/header.style.scss
+++ b/src/components/header/header.style.scss
@@ -9,7 +9,16 @@
       grid-template-rows: repeat(6, auto);
       grid-gap: 15%;
       .navbar-item {
+         display: grid;
+         grid-template-columns: 20% 80%;
          font-size: x-large;
+         color: black;
+         text-decoration: none;
+         .icon {
+            width: auto;
+            height: 1em;
+            margin-top: 3px;
+         }
       }
       .logo-container {
          text-align: center;
@@ -22,11 +31,34 @@
    }
 }
 
-@media screen and (max-width: 650px) {
+@media screen and (max-width: 930px) {
    .navbar-container {
       .navbar {
          .navbar-item {
             font-size: medium;
+         }
+      }
+   }
+}
+
+@media screen and (max-width: 650px) {
+   .navbar-container {
+      .navbar {
+         .navbar-item {
+            font-size: small;
+         }
+      }
+   }
+}
+
+@media screen and (max-width: 547px) {
+   .navbar-container {
+      .navbar {
+         .navbar-item {
+            display: inline;
+            .icon {
+               display: none;
+            }
          }
       }
    }
