improved error boundaries and started to work on reservation form

--- a/src/components/register/register.style.scss
+++ b/src/components/register/register.style.scss
@@ -5,6 +5,10 @@
    margin: auto;
 }
 
+.pending-error-message {
+	padding: 0 2% 2% 2%;
+}
+
 @media only screen and (max-width: 600px) {
 	.register {
 	width: 70%;
