--- a/src/components/sign-in/signin.style.scss
+++ b/src/components/sign-in/signin.style.scss
@@ -3,6 +3,10 @@
    margin: auto;
 }
 
+.pending-error-message {
+   padding: 2%;
+}
+
 @media only screen and (max-width: 600px) {
    .signin {
       width: 70%;
