--- a/src/components/header/header.style.scss
+++ b/src/components/header/header.style.scss
@@ -3,7 +3,7 @@
    padding: 3%;
    width: 20%;
    height: 100%;
-   background-color: lightblue;
+   // background-color: lightblue;
    .navbar {
       display: grid;
       grid-template-rows: repeat(6, auto);
@@ -12,7 +12,7 @@
          display: grid;
          grid-template-columns: 20% 80%;
          font-size: x-large;
-         color: black;
+         // color: black;
          text-decoration: none;
          .icon {
             width: auto;
