--- a/src/pages/sign-in_page/sign-in.page.style.scss
+++ b/src/pages/sign-in_page/sign-in.page.style.scss
@@ -2,8 +2,8 @@
    padding: 5%;
 }
 
-.link {
+.no-account-link {
    color: black;
    text-decoration: none;
-   padding: 3%;
+   padding-top: 10px;
 }
