--- a/src/components/form-input/form-input.style.scss
+++ b/src/components/form-input/form-input.style.scss
@@ -4,7 +4,6 @@ $main-color: black;
 @mixin shrinkLabel {
   top: -14px;
   font-size: 12px;
-  color: $main-color;
 }
 
 .group {
@@ -13,16 +12,15 @@ $main-color: black;
 
   .form-input {
     background: none;
-    background-color: white;
     color: $sub-color;
     font-size: 18px;
     padding: 15px 0 15px 0;
     display: block;
-    width: 100%;
+    width: 70%;
+    margin: auto;
     border: none;
     border-radius: 0;
     border-bottom: 1px solid $sub-color;
-    margin: 25px 0;
 
     &:focus {
       outline: none;
@@ -43,12 +41,22 @@ $main-color: black;
     font-weight: normal;
     position: absolute;
     pointer-events: none;
-    left: 5px;
-    top: 10px;
+    left: 15%;
+    top: 20%;
     transition: 300ms ease all;
 
     &.shrink {
       @include shrinkLabel();
     }
+  }
+}
+
+@media (max-height: 568px) {
+  @mixin shrinkLabel {
+    top: -10px;
+    font-size: 8px;
+  }
+  .group {
+    margin: 35px 0;
   }
 }
