--- a/src/pages/register_page/register.page.style.scss
+++ b/src/pages/register_page/register.page.style.scss
@@ -1,9 +1,12 @@
 .register-container {
-   padding: 5%;
+   padding: 0 5% 0 5%
 }
 
 .link {
-   padding: 3%;
-   color: black;
    text-decoration: none;
+}
+
+.header {
+   margin: auto;
+   padding-top: 20px;
 }
