--- a/src/components/select-input/select-input.style.scss
+++ b/src/components/select-input/select-input.style.scss
@@ -1,16 +1,41 @@
 .options {
-   outline:none;
-	font-weight: 700;
-	line-height: 1.3;
-	padding: .6em 1.4em .5em .8em;
 	width: 70%;
-	max-width: 100%;
-	box-sizing: border-box;
-   margin: auto;
-   margin-bottom: 2%;
-	border: 1px solid #aaa;
-	border-radius: .5em;
-	-moz-appearance: none;
-	-webkit-appearance: none;
-	appearance: none;
+	margin: auto;
+	text-align: left;
+	padding: 15px 0;
+}
+
+.first {
+	padding-top: unset;
+}
+
+.select {
+	outline:none;
+}
+
+.label {
+	margin-right: 2%;
+}
+
+@media (max-width: 930px) {
+	.options {
+		width: 80%;
+	}
+}
+
+@media (max-width: 370px) {
+	.options {
+		width: 95%;
+		.label {
+			font-size: 0.8em;
+		}
+	}
+}
+
+@media (max-width: 310px) {
+	.options {
+		.label {
+			font-size: 0.73em;
+		}
+	}
 }
