--- a/src/components/data-manage/data.manage.style.scss
+++ b/src/components/data-manage/data.manage.style.scss
@@ -1,4 +1,4 @@
-.button-change {
+Button {
    margin-top: 1%;
 }
 
@@ -8,9 +8,4 @@
       margin: auto;
       padding: 0 0 1% 0;
    }
-}
-
-.button-confirm {
-   margin-bottom: 2%;
-   margin-right: 2%;;
 }
