--- a/src/components/select-input/select-input.style.scss
+++ b/src/components/select-input/select-input.style.scss
@@ -3,6 +3,7 @@
 	margin: auto;
 	text-align: left;
 	padding: 15px 0;
+	font-family: 'Jost', Arial, sans-serif;
 }
 
 .first {
@@ -11,6 +12,7 @@
 
 .select {
 	outline:none;
+	font-family: 'Jost', Arial, sans-serif;
 }
 
 .label {
