--- a/src/components/error-boundary/error-boundary.style.scss
+++ b/src/components/error-boundary/error-boundary.style.scss
@@ -1,3 +1,12 @@
 .password-failure-message {
    text-align: left;
+   padding: 1%;
+}
+
+.failure-message {
+   padding: 1%;
+}
+
+.appointment-canceled-message {
+   padding: 1%;
 }
