--- a/src/components/form-input/form-input.style.scss
+++ b/src/components/form-input/form-input.style.scss
@@ -21,6 +21,7 @@ $main-color: black;
     border: none;
     border-radius: 0;
     border-bottom: 1px solid $sub-color;
+    font-family: 'Jost', Arial, sans-serif;
 
     &:focus {
       outline: none;
